Add redux and modal components

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "comma-dangle": ["error", "never"]
+  },
+  "globals": {
+    "document": true
+  }
 }
