--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "flow-bin": "^0.36.0",
     "html-webpack-plugin": "^2.24.1",
     "react-hot-loader": "^3.0.0-beta.1",
     "webpack": "^1.13.3",
