--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "presets": ["react", "es2015", "stage-2"],
-  "plugins": ["react-hot-loader/babel"]
+  "presets": [
+    "react",
+    "es2015",
+    "stage-0"
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+    "transform-flow-strip-types"
+  ]
 }
