--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "node": "6.9.1"
   },
   "scripts": {
-    "lint": "eslint --ext .jsx src test",
+    "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
-    "test": "npm run lint",
+    "test": "npm run lint && npm run test-unit",
+    "test-unit": "mocha ./test/unit --recursive --compilers js:babel-core/register,jsx:babel-core/register --require ./test/unit/.setup.js",
     "start-dev": "node webpack/server.js"
   },
   "repository": {
@@ -36,6 +37,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
+    "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-config-airbnb-flow": "^1.0.2",
@@ -44,6 +49,9 @@
     "eslint-plugin-react": "^6.8.0",
     "flow-bin": "^0.36.0",
     "html-webpack-plugin": "^2.24.1",
+    "jsdom": "^9.8.3",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
