--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run lint && npm run test-unit",
-    "test-unit": "mocha ./test/unit --recursive --compilers js:babel-core/register,jsx:babel-core/register --require ./test/unit/.setup.js",
+    "test-unit": "mocha test/unit/**/*.js* --recursive --compilers js:babel-register --require ./test/unit/.setup.js",
     "start-dev": "node webpack/server.js"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
