--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html-webpack-plugin": "^2.24.1",
     "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
+    "proxyquire": "^1.7.10",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.1",
     "webpack": "^1.13.3",
