Test that state is mapped to props

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -6,6 +6,7 @@
     "import/no-extraneous-dependencies": "off"
   },
   "globals": {
+    "beforeEach": true,
     "describe": true,
     "expect": true,
     "it": true
