Add Modal and test

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run lint && npm run test-unit",
-    "test-unit": "mocha test/unit/**/*.js* --recursive --compilers js:babel-register --require ./test/unit/.setup.js",
+    "test-unit": "mocha test/unit --recursive --compilers js:babel-register,jsx:babel-register --require ./test/unit/.setup.js",
     "start-dev": "node webpack/server.js"
   },
   "repository": {
@@ -51,6 +51,7 @@
     "flow-bin": "^0.36.0",
     "html-webpack-plugin": "^2.24.1",
     "jsdom": "^9.8.3",
+    "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
     "proxyquire": "^1.7.10",
     "react-addons-test-utils": "^15.4.1",
