--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "node": "6.9.1"
   },
   "scripts": {
+    "flow": "flow check",
     "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
-    "test": "npm run lint && npm run test-unit",
+    "test": "npm run lint && npm run flow && npm run test-unit",
     "test-unit": "mocha test/unit --recursive --compilers js:babel-register,jsx:babel-register --require ./test/unit/.setup.js",
     "start-dev": "node webpack/server.js"
   },
