--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "proxyquire": "^1.7.10",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.1",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
