--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "node": "6.9.1"
   },
   "scripts": {
+    "dev": "node webpack/server.js",
     "flow": "flow check",
     "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run lint && npm run flow && npm run test-unit",
-    "test-unit": "mocha test/unit --recursive --compilers js:babel-register,jsx:babel-register --require ./test/unit/.setup.js",
-    "start-dev": "node webpack/server.js"
+    "test-unit": "mocha test/unit --recursive --compilers js:babel-register,jsx:babel-register --require ./test/unit/.setup.js"
   },
   "repository": {
     "type": "git",
