--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
+    "config": "^1.24.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -54,6 +55,7 @@
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
+    "nightwatch": "^0.9.12",
     "proxyquire": "^1.7.10",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.1",
