--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "flow": "flow check",
     "lint": "eslint --ext .jsx,.js src test",
     "lint:fix": "npm run lint -- --fix",
-    "test": "npm run lint && npm run flow && npm run test:unit",
+    "test": "npm run lint && npm run flow && npm run test:unit && test:e2e",
     "test:e2e": "node test/e2e/runner.js",
     "test:unit": "mocha test/unit --recursive --compilers js:babel-register,jsx:babel-register --require ./test/unit/.setup.js"
   },
