--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-polyfill": "^6.16.0",
     "color-string": "^1.4.0",
     "contrast": "^1.0.1",
+    "copy-to-clipboard": "^3.0.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
