--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "color-string": "^1.4.0",
     "contrast": "^1.0.1",
     "copy-to-clipboard": "^3.0.5",
+    "is-color": "^0.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
