--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
+    "chai-shallow-deep-equal": "^1.4.4",
     "cheerio": "^0.22.0",
     "chromedriver": "^2.27.2",
     "config": "^1.24.0",
