--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chromedriver": "^2.27.2",
     "config": "^1.24.0",
     "cross-spawn": "^5.0.1",
+    "css-loader": "^0.26.1",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -61,12 +62,15 @@
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
+    "node-sass": "^4.3.0",
     "proxyquire": "^1.7.10",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.1",
+    "sass-loader": "^4.1.1",
     "selenium-server": "^3.0.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.1",
     "webpack": "beta",
     "webpack-dev-server": "2.2.0"
   },
