--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "config": "^1.24.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
-    "enzyme": "^2.6.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-config-airbnb-flow": "^1.0.2",
@@ -83,6 +83,8 @@
     "copy-to-clipboard": "^3.0.5",
     "is-color": "^0.2.0",
     "react": "^15.4.1",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
     "redux": "^3.6.0",
