--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
     "redux": "^3.6.0",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "spectre.css": "^0.2.14"
   }
 }
