--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^6.7.0",
     "shortid": "^2.2.6",
     "spectre.css": "^0.2.14"
   }
