--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,35 @@
+os:
+  - linux
 language: node_js
 node_js:
   - "6"
-  - "6.1"
-  - "5.11"
-  - "4"
+  - "7"
+cache:
+  directories:
+    - node_modules
+sudo: required
+dist: trusty
+env:
+  - NODE_ENV=PROD
+before_install:
+ - export CHROME_BIN=/usr/bin/google-chrome
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ - sudo apt-get update 
+ - sudo apt-get install -y libappindicator1 fonts-liberation
+ - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+ - sudo dpkg -i google-chrome*.deb
+ - rm '/usr/local/bin/f2py'
+ - rm -r '/usr/local/lib/python2.7/site-packages/numpy'
+ - brew install homebrew/science/opencv
+install:
+  - npm install
+  - npm update
+  - npm run install-selenium
+before_script:
+  - npm run distribute
+script:
+  - jdk_switcher use oraclejdk8
+  - npm run test
+  - npm run test-e2e
+  - npm run lint
